Removing/refactoring away deprecated API in Cell.java and removing oversight debug line in CodeGenTest.java